# inference_rl

./: .gitignore  README.md  README_top.md  README_top_k_beam_search.md  REFACTOR_SUMMARY.md  beam_search_config_sweep.sh  beam_search_config_sweep_test.sh  beam_search_debug.sh  beam_sweep_test.sh  codex_implement_top_k_beam_search.md  compare_kcbs_bestofn.sh  debug_run_vllm_kcbs.sh  env.sh  kcbs_logs.out  pyproject.toml  requirements.txt  run_mcmc_sampling.sh  run_vllm_beam.sh  run_vllm_kcbs.sh  run_vllm_qwen.sh  run_vllm_sampling_bestof.sh  top_k_beam_search.md
reasoning-with-sampling/llm_experiments/: beam_search_debug.py  beam_search_sweep.py  compare_kcbs_bestofn.py  eval_vllm_passk.py  topk_constrained_beam.py  vllm_beam_math.py  vllm_kcbs_math.py  vllm_passk_math.py
reasoning-with-sampling/llm_experiments/scripts/: compare_beam_vs_sampling.py
scripts/: evaluate.py  generate.py
slurm/: beam_search_debug.out  vllm_beam.out
src/datasets/: __init__.py  loaders.py
src/evaluation/: __init__.py  math_grader.py  math_normalize.py  metrics.py  parse_utils.py
src/generation/: __init__.py  prompts.py  vllm_generator.py
src/models/: __init__.py  model_configs.py
tests/: test_basic_functionality.py
